static/css/SVGEdit.css
#SVGEditorOuter {
    position: fixed;
    display: flex;
    flex-direction: column;
    background: var(--bg-hl-col);
    width: 90%;
    height: 90%;
    top: 5%;
    left: 5%;
    border: 2px solid var(--hl-col);
}

#SVGEditorBox {
    display: flex;
    height: calc(100% - 40px);
    width: 100%;
}

#SVGEditorNav {
    bottom: 0px;
    background: var(--bg-hl2-col);
    width: 100%;
    height: 40px;
    display: flex;
    margin: 0px;
    padding: 5px 0px 5px 5px;
    font-size: 80%;
    background-color: var(--bg-hl2-col);
    font-family: 'Open Sans', sans-serif;
    justify-content: flex-end;
}

#SVGEditorNav .foot_butt {
    line-height: 20px;
    margin-bottom: 0;
    margin-left: 0;
}

#SVGEditorBoxLeft {
    width: 50%;
    height: 100%;
    min-height: 50px;
}

#SVGEditorInput {
    white-space: pre-wrap;
    width: 100%;
    height: 100%;
    padding: 10px;
    font-size: 75%;
    overflow: scroll;
    border: none;
    background: white;
}

textarea::-moz-placeholder,
textarea:-webkit-input-placeholder,
input::-moz-placehold,
input::-webkit-input-placeholder {
    font-size: 100%;
}

/* RIGHT  */

#SVGEditorBoxRight {
    display: flex;
    height: 100%;
    width: 50%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px;
}

#SVGEditorOutput {
    height: calc(100% - 40px);
    width: 100%;
}

#SVGEditorTag {
    height: 40px;
    width: 100%;
    margin-top: 20px;
}

#SVGEditorOutput svg {
    max-width: 600px;
    background-color: var(--bg-col);
}

.input_err {
    border: 1px solid var(--hl2-col);
}

